--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1199,22 +1199,9 @@ textarea.form-input::-webkit-resizer { display: none; }
 
 .form-btn ion-icon { font-size: 16px; }
 
-.form-btn:hover { background: var(--bg-gradient-yellow-1); }
+.form-btn:hover { background: var(--bg-gradient-yellow-1) !important; }
 
-.form-btn:hover::before { background: var(--bg-gradient-yellow-2); }
-
-.form-btn:disabled {
-  opacity: 0.7;
-  cursor: not-allowed;
-}
-
-.form-btn:disabled:hover { background: var(--border-gradient-onyx); }
-
-.form-btn:disabled:hover::before { background: var(--bg-gradient-jet); }
-
-
-
-
+.form-btn:hover::before { background: var(--bg-gradient-yellow-2) !important; }
 
 /*-----------------------------------*\
   #RESPONSIVE
