--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -500,18 +500,18 @@ main {
 }
 
 .about-text>ul {
+  list-style: none;
   margin: 10px;
 }
 
 .about-text li {
-  list-style: none;
+  list-style: disc;
   padding-inline: 30px;
 }
 
 
 .about-li>li {
-  list-style: decimal;
-  padding-inline: 20px;
+  list-style: none;
 }
 
 
