--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -519,7 +519,7 @@ main {
  * #service 
  */
 
-.service { margin-bottom: 35px; }
+.service { margin-top: 35px; }
 
 .service-title { margin-bottom: 20px; }
 
