--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@
   --onyx: hsl(240, 1%, 17%);
   --eerie-black-1: hsl(240, 2%, 13%);
   --eerie-black-2: hsl(240, 2%, 12%);
-  --smoky-black: hsl(0, 0%, 7%);
+  --smoky-black: linear-gradient(-255deg, #f7f7f7, #000000);
   --white-1: hsl(0, 0%, 100%);
   --white-2: hsl(0, 0%, 98%);
   --orange-yellow-crayola: hsl(45, 100%, 72%);
@@ -271,8 +271,6 @@ article.active {
 }
 
 .has-scrollbar::-webkit-scrollbar {
-  width: 5px;
-  /* for vertical scrollbar */
   height: 5px;
   /* for horizontal scrollbar */
 }
@@ -2006,32 +2004,6 @@ textarea.form-input::-webkit-resizer {
   /**
    * RESET
    */
-
-  body::-webkit-scrollbar {
-    width: 20px;
-  }
-
-  body::-webkit-scrollbar-track {
-    background: var(--smoky-black);
-  }
-
-  body::-webkit-scrollbar-thumb {
-    border: 5px solid var(--smoky-black);
-    background: hsla(0, 0%, 100%, 0.1);
-    border-radius: 20px;
-    box-shadow: inset 1px 1px 0 hsla(0, 0%, 100%, 0.11),
-      inset -1px -1px 0 hsla(0, 0%, 100%, 0.11);
-  }
-
-  body::-webkit-scrollbar-thumb:hover {
-    background: hsla(0, 0%, 100%, 0.15);
-  }
-
-  body::-webkit-scrollbar-button {
-    height: 60px;
-  }
-
-
 
   /**
    * REUSED STYLE
